--- a/frontEnd/src/index.css
+++ b/frontEnd/src/index.css
@@ -2,5 +2,5 @@ body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #d3cdcd;
+  background-color: #bcadad;
 }
